<resources>
    <string name="app_name">ShoppingList</string>
    <string name="settings">Настройки</string>
    <string name="notes">Записи</string>
    <string name="shop_list">Список покупок</string>
    <string name="new_item">Новый элемент</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">ShoppingListFragment</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="colorpicker">ColorPicker</string>
    <string name="new_list">Новый список</string>
    <string name="update_title_list">Изменить список</string>
    <string name="list_name">Название списка</string>
    <string name="create_list">Создать список</string>
    <string name="update_list">Update list</string>
    <string name="list_is_empty">List is empty</string>
    <string name="delete">Удалить</string>
    <string name="do_you_want_delete_item">Вы хотите удалить этот элемент?</string>
    <string name="list_is_empty_shop_activity">Список пуст</string>
    <string name="update_dialog">Изменить элемент списка</string>
    <string name="list_item">Элемент списка</string>
    <string name="list_item_info">Дополнительная информация</string>
    <string name="update_list_item_dialog_button">Изменить элемент</string>
</resources>