<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#D3B6D6D1"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/update_dialog"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eText_update_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/list_item"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/eText_update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/list_item_info"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:maxLength="100"/>

            <Button
                android:id="@+id/button_update_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/green_CP"
                android:text="@string/update_list_item_dialog_button" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>